<resources>
    <string name="app_name">Buka Pagar</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Pagers!</string>
    <string name="slide_1_desc">The easiest way to find homestay from your phone!</string>

    <string name="slide_2_title">Text 1 </string>
    <string name="slide_2_desc">text text text</string>

    <string name="slide_3_title">Text 2</string>
    <string name="slide_3_desc">text text text</string>

    <string name="slide_4_title">Text 3</string>
    <string name="slide_4_desc">Text text</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_pencarian_rumah">PencarianRumahActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sign_in_short">Daftar</string>
    <string name="email">Email</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="username">Username</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="auth_login_failed">Authentication failed, check your email and password or sign in</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Belum Punya Akun? Daftarkan disini! </string>
    <string name="btn_link_to_login">Sudah Punya Akun? Masuk disini!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="peta">Peta</string>
    <string name="list">List</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Setting</string>
    <!-- TODO Autentikasi -->
    <string name="tittle_loading">Please Wait</string>
    <string name="loading">please wait, still getting Application</string>
    <string name="auth_failed_from_apps">User Not Found, Please Sign Up or Re-Login</string>
    <string name="recheck_email">Periksa Kembali Email Anda</string>
    <string name="failed_recheck_email">Gagal Mengirim Tautan, Periksa Kembali Email Anda</string>
    <string name="successfully_send_forgot_email">Kami Telah Mengirimkan Tautan Untuk Mengubah Password Anda</string>

    <string name="verified">verified</string>
    <string name="notverified">not verified</string>
    <string name="onprocess">on process</string>
    <string name="title_activity_setting_">Setting_Activity</string>
    <string name="title_activity_menu_makanan">MenuMakananActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_penjual_fragment_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--Lorem-->
    <string name="ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="totalsaldo">TOTAL SALDO</string>
    <string name="jmlsaldo">Rp.0</string>
    <string name="tambahsaldo">Tambah</string>
    <string name="riwayat">RIWAYAT</string>

    <array name="jenispembayaran">
        <item>Transfer Bank</item>
        <item>COD</item>
    </array>

    <array name="jenispembayaran2">
        <item>Transfer Bank</item>
    </array>
</resources>
